--- a/ASSETS/CSS/Style.css
+++ b/ASSETS/CSS/Style.css
@@ -144,7 +144,7 @@ h2 {
     flex-direction: column;
     text-align: center;
 }
-
+/* footer */
 footer a {
     display: flex;
     justify-content: center;
